Add lat_lng_estacoes.csv to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 .ipynb_checkpoints
 **/.ipynb_checkpoints/
 
-# Ignore all /data/cleandata/ folders and files, except 'Enchentes_LatLong.csv'
+# Ignore all /data/cleandata/ folders and files, except 'Enchentes_LatLong.csv' and 'lat_lng_estacoes.csv'
 data/cleandata/**
+!data/cleandata/Estacoes/
+data/cleandata/Estacoes/**
+!data/cleandata/Estacoes/lat_lng_estacoes.csv
 !data/cleandata/Ordens de serviço/
 data/cleandata/Ordens de serviço/**
 !data/cleandata/Ordens de serviço/Enchentes_LatLong.csv
