include idw interpolation and openweather repair

--- a/src/Pipeline/config/error_regions.yaml
+++ b/src/Pipeline/config/error_regions.yaml
@@ -45,5 +45,6 @@ VelocidadeDoVento:
 
 Precipitacao:
     d_threshold: 30
-    z_threshold: 8
-    nz_threshold: 4320
+    z_threshold: 1440
+    nz_threshold: 8
+    margins: 1
